--- a/pages/locations.html
+++ b/pages/locations.html
@@ -62,6 +62,158 @@
               class="navigate_btn"
             >詳細資訊</a>
           </li>
+          <li class="card">
+            <img 
+              class="card_img"
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/store-2.png?raw=true" 
+              alt=""
+            >
+            <h3 class="card_title">台北綠園店</h3>
+            <div class="card_content">
+              <div>
+                <span class="material-symbols-outlined">
+                  call
+                </span>
+                <p>
+                  電話 : <a href="tel:(02)000-2345">(02)000-2345</a>
+                </p>
+              </div>
+              <div>
+                <span class="material-symbols-outlined">
+                  schedule
+                </span>
+                <p>
+                  營業時間 : 10:00-21:00
+                </p>
+              </div>
+              <div>
+                <span class="material-symbols-outlined">
+                  location_on
+                </span>
+                <p>
+                  地址：台北市中正區復興南路 132-1 號
+                </p>
+              </div>
+            </div>
+            <a 
+              href="#" 
+              class="navigate_btn"
+            >詳細資訊</a>
+          </li>
+          <li class="card">
+            <img 
+              class="card_img"
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/store-3.png?raw=true" 
+              alt=""
+            >
+            <h3 class="card_title">台中清水旗艦店</h3>
+            <div class="card_content">
+              <div>
+                <span class="material-symbols-outlined">
+                  call
+                </span>
+                <p>
+                  電話 : <a href="tel:(02)000-1234">(02)000-1234</a>
+                </p>
+              </div>
+              <div>
+                <span class="material-symbols-outlined">
+                  schedule
+                </span>
+                <p>
+                  營業時間 : 10:00-21:00
+                </p>
+              </div>
+              <div>
+                <span class="material-symbols-outlined">
+                  location_on
+                </span>
+                <p>
+                  地址：台中市清水區經南一路 23 號 8 樓
+                </p>
+              </div>
+            </div>
+            <a 
+              href="#" 
+              class="navigate_btn"
+            >詳細資訊</a>
+          </li>
+          <li class="card">
+            <img 
+              class="card_img"
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/store-4.png?raw=true" 
+              alt=""
+            >
+            <h3 class="card_title">高雄中正形象店</h3>
+            <div class="card_content">
+              <div>
+                <span class="material-symbols-outlined">
+                  call
+                </span>
+                <p>
+                  電話 : <a href="tel:(07)000-2345">(07)000-2345</a>
+                </p>
+              </div>
+              <div>
+                <span class="material-symbols-outlined">
+                  schedule
+                </span>
+                <p>
+                  營業時間 : 10:00-21:00
+                </p>
+              </div>
+              <div>
+                <span class="material-symbols-outlined">
+                  location_on
+                </span>
+                <p>
+                  地址：高雄市苓雅區中正路 38 號 12 樓
+                </p>
+              </div>
+            </div>
+            <a 
+              href="#" 
+              class="navigate_btn"
+            >詳細資訊</a>
+          </li>
+          <li class="card">
+            <img 
+              class="card_img"
+              src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/store-5.png?raw=true" 
+              alt=""
+            >
+            <h3 class="card_title">高雄夢時代店</h3>
+            <div class="card_content">
+              <div>
+                <span class="material-symbols-outlined">
+                  call
+                </span>
+                <p>
+                  電話 : <a href="tel:(07)000-1234">(07)000-1234</a>
+                </p>
+              </div>
+              <div>
+                <span class="material-symbols-outlined">
+                  schedule
+                </span>
+                <p>
+                  營業時間 : 10:00-21:00
+                </p>
+              </div>
+              <div>
+                <span class="material-symbols-outlined">
+                  location_on
+                </span>
+                <p>
+                  地址：高雄市前鎮區中華一路 63 號 6 樓
+                </p>
+              </div>
+            </div>
+            <a 
+              href="#" 
+              class="navigate_btn"
+            >詳細資訊</a>
+          </li>
         </ul>
       </div>
     </main>
