--- a/locationInDetail.html
+++ b/locationInDetail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <title>about</title>
+    <title>locationInDetail</title>
     <script type="module" crossorigin src="/HexSchool_layout_Week4/assets/locations-750285a1.js"></script>
     <link rel="stylesheet" href="/HexSchool_layout_Week4/assets/locations-6b958328.css">
   </head>
