chore: change the navagation settings 1. modify - the navigated path of index.html 2. modify - the navagated path of the a tag of locations page

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -58,7 +58,7 @@
               </div>
             </div>
             <a 
-              href="/HexSchool_layout_Week4/pages/locationInDetail.html" 
+              href="./locationInDetail.html" 
               class="navigate_btn"
             >詳細資訊</a>
           </li>
@@ -96,7 +96,7 @@
               </div>
             </div>
             <a 
-              href="/HexSchool_layout_Week4/pages/locationInDetail.html"  
+              href="./locationInDetail.html" 
               class="navigate_btn"
             >詳細資訊</a>
           </li>
@@ -134,7 +134,7 @@
               </div>
             </div>
             <a 
-              href="/HexSchool_layout_Week4/pages/locationInDetail.html"  
+              href="./locationInDetail.html" 
               class="navigate_btn"
             >詳細資訊</a>
           </li>
@@ -172,7 +172,7 @@
               </div>
             </div>
             <a 
-              href="/HexSchool_layout_Week4/pages/locationInDetail.html"  
+              href="./locationInDetail.html" 
               class="navigate_btn"
             >詳細資訊</a>
           </li>
@@ -210,7 +210,7 @@
               </div>
             </div>
             <a 
-              href="/HexSchool_layout_Week4/pages/locationInDetail.html" 
+              href="./locationInDetail.html" 
               class="navigate_btn"
             >詳細資訊</a>
           </li>
