--- a/locations.html
+++ b/locations.html
@@ -98,7 +98,7 @@
               </div>
             </div>
             <a 
-              href="/HexSchool_layout_Week4/pages/locationInDetail.html" 
+              href="./locationInDetail.html" 
               class="navigate_btn"
             >詳細資訊</a>
           </li>
@@ -136,7 +136,7 @@
               </div>
             </div>
             <a 
-              href="/HexSchool_layout_Week4/pages/locationInDetail.html"  
+              href="./locationInDetail.html" 
               class="navigate_btn"
             >詳細資訊</a>
           </li>
@@ -174,7 +174,7 @@
               </div>
             </div>
             <a 
-              href="/HexSchool_layout_Week4/pages/locationInDetail.html"  
+              href="./locationInDetail.html" 
               class="navigate_btn"
             >詳細資訊</a>
           </li>
@@ -212,7 +212,7 @@
               </div>
             </div>
             <a 
-              href="/HexSchool_layout_Week4/pages/locationInDetail.html"  
+              href="./locationInDetail.html" 
               class="navigate_btn"
             >詳細資訊</a>
           </li>
@@ -250,7 +250,7 @@
               </div>
             </div>
             <a 
-              href="/HexSchool_layout_Week4/pages/locationInDetail.html" 
+              href="./locationInDetail.html" 
               class="navigate_btn"
             >詳細資訊</a>
           </li>
